fix(Badge): Multi values separator contrast & alignment issues (#19)

--- a/src/components/Badges/BadgeFaceted/BadgeFaceted.scss
+++ b/src/components/Badges/BadgeFaceted/BadgeFaceted.scss
@@ -38,7 +38,9 @@
 			}
 			> span:not(:first-child):before {
 				content: '|';
-				color: $silver;
+				position: relative;
+				top: -1px;
+				opacity: 0.5;
 				padding: 0 $padding-smaller;
 			}
 		}
